# smcraft

./: .gitignore  KINSHIP.md  MMOT.md  README.md  __.md  smcraft-evaluation.tandt.json
examples/: bdbo_strategy.smdf.json  fdb_breakout_strategy.smdf.json
mcp/: package-lock.json  package.json
mcp/src/: server.ts
py/: Makefile  README.md  bump.py  pyproject.toml  release.sh
py/smcraft/: __init__.py  cli.py  codegen.py  model.py  parser.py  runtime.py
py/tests/: test_statemachine.py
rispecs/: 70-smdf-format.spec.md  71-runtime-engine.spec.md  72-code-generator.spec.md  73-mcp-server.spec.md  74-web-designer.spec.md
tests/mcp_tests/: package-lock.json  package.json  streetlight_app.py  streetlight_app.ts  tsconfig.json
tests/mcp_tests/.gemini/: settings.json
ts/: README.md  package-lock.json  package.json
ts/src/: codegen.ts  index.ts  model.ts  parser.ts  runtime.ts
ts/src/tests/: statemachine.test.ts
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/generate/: route.ts
web/src/components/: Canvas.tsx  CodePreview.tsx  EventsPanel.tsx  PropertiesPanel.tsx  SettingsPanel.tsx  Toolbar.tsx  ValidationPanel.tsx
web/src/store/: useDesignerStore.ts
web/src/types/: definition.ts
